feat: enhance CORS configuration to allow credentials, headers, and set max age; switch to allowedOriginPatterns